<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/welcome"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/trackImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/location"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/latitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/trackImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/latitude_default"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/longitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/latitudeText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/longitude_default"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/altitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/longitudeText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/altitude_default"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/signalStrengthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/altitudeText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/signal_strength_default"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/batteryLevelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signalStrengthText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/battery_level_default"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/batteryLevelText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/language_selection"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spn_language_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/batteryLevelText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textSize="18sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>